# openglesdemo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniUtil.h  bitmap.cpp  bitmap.h  computer.cpp  computer.h  native-lib.cpp
app/src/main/java/com/example/opengldemo/: GlActivity.kt  GlRegender.java  MainActivity.kt  MyApplication.kt  NBitmapLib.kt
app/src/main/res/layout/: activity_gl.xml  activity_main.xml
app/src/test/java/com/example/opengldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
